<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mustang Tutors</string>

    <string-array name="logged_out_menu">
        <item>Search for Tutors</item>
        <item>Login as a Tutor</item>
    </string-array>
    <string-array name="logged_out_menu_images">
        <item>ic_action_search</item>
        <item>ic_action_accounts</item>
    </string-array>
    <string-array name="logged_in_menu">
        <item>[Your name here]</item>
        <item>Search for Tutors</item>
        <item>Document a Student Meeting</item>
        <item>Logout</item>
    </string-array>
    <string-array name="logged_in_menu_images">
        <item>ic_action_person</item>
        <item>ic_action_search</item>
        <item>ic_action_new_event</item>
        <item>ic_action_secure</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="logged_in">You are now logged in.</string>
    <string name="logged_out">You are now logged out.</string>
    <string name="search_tutors">Search Tutors</string>
    <string name="search_subject">Subject</string>

    <string-array name="subjects">
        <item>Subject</item>
    </string-array>

    <string name="search_course_number">Course Number</string>
    <string name="search_course_name">Course Name</string>
    <string name="search_available">Tutor is Available</string>
    <string name="search_submit">Go!</string>
    <string name="search_progress">Searching...</string>
    <string name="search_no_results">No tutors found.</string>
    <string name="title_activity_meeting">Document a Student Meeting</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tutor">Tutor Profile</string>
    
    <string name="new_meeting_title">Add a Meeting</string>
    <string name="student_id">Student ID:</string>
    <string name="course_tutored">Course Tutored:</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="comments">Comments (1-3 sentences):</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    
    <string name="course_heading">Courses</string>
    <string name="hour_heading">Hours</string>

    <string name="to">-</string>
    
    <string name="more">More >></string>
    <string name="less">Less >></string>
    
</resources>
