<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->


<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <LinearLayout
        style="@style/SearchPage"
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button 
            style="@style/SearchBar"
            android:id="@+id/SearchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/down"
            android:text="@string/search_tutors" />
        <RelativeLayout
            style="@style/SearchForm"
            android:id="@+id/SearchForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <Spinner 
                android:id="@+id/SearchSubject"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:prompt="@string/search_subject" />
            <EditText
                android:id="@+id/SearchCourseNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/SearchSubject"
                android:hint="@string/search_course_number"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />
            <EditText
                android:id="@+id/SearchCourseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/SearchCourseNumber"
                android:hint="@string/search_course_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
            <CheckBox
                android:id="@+id/SearchAvailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/SearchCourseName"
                android:text="@string/search_available"/>
            <Button
                android:id="@+id/SearchSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/SearchAvailable"
            	android:layout_centerHorizontal="true"
                android:text="@string/search_submit"/>
        </RelativeLayout>
	    <ListView
	        style="@style/Search"
	        android:id="@+id/listview"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"/>
    </LinearLayout>

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view. -->
    <ListView
        style="@style/NavigationDrawer"
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:dividerHeight="1dp"/>
</android.support.v4.widget.DrawerLayout>
