<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/new_meeting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_meeting_title"
        style="@style/new_meeting_title"></TextView>
    
    <LinearLayout
        android:id="@+id/meeting_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical">
     	
        <LinearLayout
            android:id="@+id/meeting_info_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView
                android:id="@+id/student_id_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/student_id"
                style="@style/meeting_info_label"></TextView>
            
            <!-- Other -->
            
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/meeting_info_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView
                android:id="@+id/course_tutored_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/course_tutored"
                style="@style/meeting_info_label"></TextView>
            
            <!-- Other -->
            
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/meeting_info_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView
                android:id="@+id/date_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/date"
                style="@style/meeting_info_label"></TextView>
            
            <!-- Other -->
            
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/meeting_info_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView
                android:id="@+id/time_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/time"
                style="@style/meeting_info_label"></TextView>
            
            <!-- Other -->
            
        </LinearLayout>
        
    </LinearLayout>
    
    <TextView></TextView>
    
    <EditText></EditText>
    
    <LinearLayout 
        android:orientation="horizontal">
        
        <ButtonView></ButtonView>
        
        <ButtonView></ButtonView>
        
    </LinearLayout>

</LinearLayout>
